fix: timeout and docker files